[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "maxio-advanced-billing-sdk"
description = "Ultimate billing and pricing flexibility for B2B SaaS.\nMaxio integrates directly into your product, so you can seamlessly manage your product catalog, bill customers, and collect payments."
version = "3.0.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Maxio", "Advaced Billing", "Payments", "Subscription"]
authors = [{name = "Maxio SDK", email = "maxio-sdk@maxio.com"}]
urls = {Homepage = "https://www.maxio.com/product/advanced-billing"}
dependencies = ["apimatic-core~=0.2.0", "apimatic-core-interfaces~=0.1.0", "apimatic-requests-client-adapter~=0.1.0", "enum34~=1.1, >=1.1.10", "deprecation~=2.1", "python-dateutil~=2.8.1", "jsonschema~=3.2.0"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
