[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "maxio-advanced-billing-sdk"
description = "Ultimate billing and pricing flexibility for B2B SaaS.\nMaxio integrates directly into your product, so you can seamlessly manage your product catalog, bill customers, and collect payments."
version = "7.0.0"
readme = "README.md"
keywords = ["Maxio", "Advaced Billing", "Payments", "Subscription"]
dependencies = ["apimatic-core~=0.2.0, >= 0.2.20", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6", "deprecation~=2.1"]
classifiers = []
requires-python = ">=3.7"
[[project.authors]]
name = "Maxio SDK"
email = "maxio-sdk@maxio.com"

[project.urls]
Homepage = "https://www.maxio.com/product/advanced-billing"
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool]
[tool.setuptools]
[tool.setuptools.packages]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
